--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
 
     <main id="main" class="site-main main">
         <section class="container" id="banner">
-            <img src="./img_cmivqa/logo_mmivqa.svg" width=150>
+            
             <div class="title-text-box">
                  <h1 class="display-4 text-bold">MMIVQA</h1>
                 <h2 class="display-5 text-bold">Multilingual Medical Instructional Video Question Answering Challenge</h2>
                 <h5 class="text-regular">May held in ACM MULTIMEDIA 2024</h5>
             </div>
+            <img src="./img_cmivqa/logo_mmivqa_big.svg" width=1150>
             <a class="btn" id="learn-more-btn" href="#challenge" role="button">Learn more</a>
             <a class="btn" id="download-btn" href="#downloads" role="button">Download dataset</a>
         </section>
