--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                 <h2 class="display-5 text-bold">Multilingual Medical Instructional Video Question Answering Challenge</h2>
                 <h5 class="text-regular">May held in ACM MULTIMEDIA 2024</h5>
             </div>
-            <img src="./img_cmivqa/logo_mmivqa_big.svg" width=450>
+            <img src="./img_cmivqa/logo_mmivqa_big.svg" width=550>
+            <br>
             <a class="btn" id="learn-more-btn" href="#challenge" role="button">Learn more</a>
             <a class="btn" id="download-btn" href="#downloads" role="button">Download dataset</a>
         </section>
@@ -84,7 +85,7 @@
 <center><h6><br>Fig. 1: Illustration of Multilingual Temporal Answer Grounding in Singe Video (mTAGSV). </h6></center>
                         <ul>
 </div>
-                        <li ><b>Track 1. Multilingual Temporal Answer Grounding in Singe Video (mTAGSV): As shown in Fig. 1: given a medical or health-related question and a single untrimmed bilingual medical instructional video, this track aims to locate the temporal answer (start and end time points) within the video. We also provide both Chinese and English questions and captions for promote the multilingual methods.</li><!--li>Given the identity and audio signals of the speaker, participants are challenged to develop an algorithm to generate a video that can match the audio signals.</li-->
+                        <li ><b>Track 1. Multilingual Temporal Answer Grounding in Singe Video (mTAGSV): As shown in Fig. 1: given a medical or health-related question and a single untrimmed bilingual medical instructional video, this track aims to locate the temporal answer (start and end time points) within the video. We also provide both Chinese and English questions and captions for promote the multilingual methods.</li><!--li>Given the identity and audio signals of the speaker, participants are challenged to develop an algorithm to generate a video that can match the audio signals.</b></li-->
                 </ul>
                     <center><img src="./img_cmivqa/track2.png" width=90% style="margin-top: 15px"></center>
                     <div>
@@ -97,11 +98,11 @@
                     <div>
 <center><h6><br>Fig. 3: Illustration of Multilingual Temporal Answer Grounding in Video Corpus (mTAGVC).</h6></center>
 <ul>
-                    <li><b>Track 3. Multilingual Temporal Answer Grounding in Video Corpus (mTAGVC): As shown in Fig. 3, given a text question and a large collection of untrimmed bilingual medical instructional videos, this track aims at finding the matching video answer span within the most relevant video corresponding to the given question in the video corpus.</li-->
+                    <li><b>Track 3. Multilingual Temporal Answer Grounding in Video Corpus (mTAGVC): As shown in Fig. 3, given a text question and a large collection of untrimmed bilingual medical instructional videos, this track aims at finding the matching video answer span within the most relevant video corresponding to the given question in the video corpus.</b></li-->
                 </ul>
                     </p>
                     <!--
-                    <b>Vivid talking head video generation</b> conditioned on the identity and audio signals of the speaker; <b>Responsive listening head video generation</b> conditioned on the identity of the listener and with responding to the speaker’s behaviors in real-time. The main difficulties lie in the large amount of products labels, and fine-grained details of similar products. Top-1 and Top-5 accuracy is measured to rank each submission.
+                    <b>Vivid talking head video generation</b> conditioned on the identity and audio signals of the speaker; <b>Responsive listening head video generation</b> conditioned on the identity of the listener and with responding to the speaker’s behaviors in real-time. The main difficulties lie in the large amount of products labels, and fine-grained details of similar products. Top-1 and Top-5 accuracy is measured to rank each submission.</b>
                     </p>
                     -->
                     <p class="card-text">
